Split addIngestMetrics into 2 methods